# cpp_vk_lib

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: macos.yml  macos_curl_debug.yml  ubuntu.yml  ubuntu_curl_debug.yml
benchmark/: CMakeLists.txt  benchmark.gnuplot  create_graph.sh
benchmark/src/: benchmarking.hpp  event_message_new.cpp  event_wall_post_new.cpp  event_wall_reply_new.cpp  time_measurement.hpp
benchmark/src/events/: message_new.cpp  wall_post_new.cpp  wall_reply_new.cpp
benchmark/src/string_utils/: convert_ascii.cpp  convert_utf8.cpp  join.cpp  lazy_split.cpp  split.cpp
cmake/: cpp_vk_lib_sanitize.cmake
cpp_vk_lib/: CMakeLists.txt
cpp_vk_lib/include/cpp_vk_lib/runtime/: result.hpp  setup_logger.hpp  signal_handlers.hpp  stacktrace_dump.hpp  uncopyable.hpp  unmovable.hpp  unreachable_point.hpp
cpp_vk_lib/include/cpp_vk_lib/runtime/misc/: cppdefs.hpp
cpp_vk_lib/include/cpp_vk_lib/runtime/net/: network.hpp
cpp_vk_lib/include/cpp_vk_lib/runtime/string_utils/: string_utils.hpp
cpp_vk_lib/include/cpp_vk_lib/runtime/string_utils/implementation/: convert_ascii.hpp  convert_utf8.hpp  format.hpp  join.hpp  lazy_split.hpp  split.hpp
cpp_vk_lib/include/cpp_vk_lib/vk/: api_constants.hpp  cpp_vk_lib.hpp
cpp_vk_lib/include/cpp_vk_lib/vk/attachment/: attachment.hpp
cpp_vk_lib/include/cpp_vk_lib/vk/config/: config.hpp
cpp_vk_lib/include/cpp_vk_lib/vk/error/: ensure_api_request_succeeded.hpp  error_code.hpp  exception.hpp  translate_error.hpp
cpp_vk_lib/include/cpp_vk_lib/vk/events/: action.hpp  attachment_handler.hpp  common.hpp  message_new.hpp  type.hpp  wall_post_new.hpp  wall_reply_new.hpp  wall_repost.hpp
cpp_vk_lib/include/cpp_vk_lib/vk/keyboard/: colors.hpp  flags.hpp  layout.hpp
cpp_vk_lib/include/cpp_vk_lib/vk/keyboard/buttons/: base.hpp  location.hpp  open_app.hpp  text.hpp  vk_pay.hpp
cpp_vk_lib/include/cpp_vk_lib/vk/long_poll/: long_poll.hpp
cpp_vk_lib/include/cpp_vk_lib/vk/methods/: basic.hpp  constructor.hpp  mentions.hpp  message_constructor.hpp
cpp_vk_lib/include/cpp_vk_lib/vk/oauth/: client.hpp
cpp_vk_lib/src/: implementation.cpp
cpp_vk_lib/src/runtime/: implementation.cpp  setup_logger.cpp  signal_handlers.cpp  stacktrace_dump.cpp
cpp_vk_lib/src/runtime/net/: callback.hpp  network.cpp
cpp_vk_lib/src/vk/: implementation.cpp
cpp_vk_lib/src/vk/attachment/: audio_message.cpp  base.cpp
cpp_vk_lib/src/vk/config/: config.cpp
cpp_vk_lib/src/vk/error/: ensure_api_request_succeeded.cpp  exception.cpp  translate_error.cpp
cpp_vk_lib/src/vk/events/: attachment_handler.cpp  common.cpp  message_new.cpp  wall_post_new.cpp  wall_reply_new.cpp  wall_repost.cpp
cpp_vk_lib/src/vk/keyboard/: layout.cpp
cpp_vk_lib/src/vk/long_poll/: long_poll.cpp
cpp_vk_lib/src/vk/methods/: basic.cpp  constructor.cpp  message_constructor.cpp
cpp_vk_lib/src/vk/oauth/: client.cpp
docs/: action_8hpp.html  action_8hpp_source.html  annotated.html  api__constants_8hpp.html  api__constants_8hpp_source.html  attachment_8hpp.html  attachment_8hpp_source.html  attachment__handler_8cpp.html  attachment__handler_8hpp.html  attachment__handler_8hpp_source.html  audio_8cpp.html  audio__message_8cpp.html  base_8cpp.html  base_8hpp.html  base_8hpp_source.html  basic_8cpp.html  basic_8hpp.html  basic_8hpp_source.html  callback_8hpp.html  callback_8hpp_source.html  classanonymous__namespace_02config_8cpp_03_1_1loader-members.html  classanonymous__namespace_02config_8cpp_03_1_1loader.html  classcurl__executor-members.html  classcurl__executor.html  classcurl__wrap-members.html  classcurl__wrap.html  classes.html  classimpl_1_1libcurl__wrap-members.html  classimpl_1_1libcurl__wrap.html  classruntime_1_1string__utils_1_1split__iterator-members.html  classruntime_1_1string__utils_1_1split__iterator.html  classruntime_1_1string__utils_1_1split__range-members.html  classruntime_1_1string__utils_1_1split__range.html  classvk_1_1attachment_1_1audio-members.html  classvk_1_1attachment_1_1audio.html  classvk_1_1attachment_1_1audio__message-members.html  classvk_1_1attachment_1_1audio__message.html  classvk_1_1attachment_1_1base-members.html  classvk_1_1attachment_1_1base.html  classvk_1_1attachment_1_1document-members.html  (+303 more)
docs/html/: md_README.html
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  defines_1.js  enums_0.js  (+85 more)
examples/: CMakeLists.txt  docs_search  docs_search.cpp  download_audio_messages.cpp  friends_graph.cpp  long_poll  long_poll.cpp  upload_audio_message  upload_audio_message.cpp  wall_get  wall_get.cpp
json_schema/: sample_config.json
modules/: CMakeLists.txt
tests/: CMakeLists.txt  CTestTestfile.cmake  api_request  api_request.cpp  api_tests.hpp  attachments  attachments.cpp  config  config.cpp  config_tests.hpp  curl  curl.cpp  curl_tests.hpp  error_code  error_code.cpp  event_tests.hpp  events  events.cpp  exception  exception.cpp  exception_tests.hpp  keyboard  keyboard.cpp  keyboard_tests.hpp  main.cpp  result  result.cpp  result_tests.hpp  setup_testing_environment.hpp  string_util_tests.hpp  string_utils  string_utils.cpp
